@@ -182,8 +182,8 @@ if (isset($_REQUEST['clone']) && isset($_REQUEST['graphid'])) {
 
 	$_REQUEST['form'] = 'clone';
 }
-elseif (isset($_REQUEST['save'])) {
-	$items = get_request('items', array());
+elseif (hasRequest('save')) {
+	$items = getRequest('items', array());
 
 	// remove passing "gitemid" to API if new items added via pop-up
 	foreach ($items as &$item) {
@@ -213,68 +213,92 @@ elseif (isset($_REQUEST['save'])) {
 		'gitems' => $items
 	);
 
-	if (!empty($_REQUEST['parent_discoveryid'])) {
+	// create and update graph prototypes
+	if (hasRequest('parent_discoveryid')) {
 		$graph['flags'] = ZBX_FLAG_DISCOVERY_PROTOTYPE;
+
+		if (hasRequest('graphid')) {
+			$graph['graphid'] = getRequest('graphid');
+			$result = API::GraphPrototype()->update($graph);
+
+			show_messages($result, _('Graph prototype updated'), _('Cannot update graph prototype'));
+
+		}
+		else {
+			$result = API::GraphPrototype()->create($graph);
+
+			show_messages($result, _('Graph prototype added'), _('Cannot add graph prototype'));
+		}
+
+		clearCookies($result, getRequest('parent_discoveryid'));
+	}
+	// create and update graphs
+	else {
+		if (hasRequest('graphid')) {
+			$graph['graphid'] = getRequest('graphid');
+			$result = API::Graph()->update($graph);
+
+			show_messages($result, _('Graph updated'), _('Cannot update graph'));
+		}
+		else {
+			$result = API::Graph()->create($graph);
+
+			show_messages($result, _('Graph added'), _('Cannot add graph'));
+		}
+
+		clearCookies($result, getRequest('hostid'));
 	}
 
-	if (isset($_REQUEST['graphid'])) {
-		$graph['graphid'] = $_REQUEST['graphid'];
-
-		$result = !empty($_REQUEST['parent_discoveryid'])
-			? API::GraphPrototype()->update($graph)
-			: API::Graph()->update($graph);
-
-		if ($result) {
-			add_audit(AUDIT_ACTION_UPDATE, AUDIT_RESOURCE_GRAPH, 'Graph ID ['.$_REQUEST['graphid'].'] Graph ['.$_REQUEST['name'].']');
+	if ($result) {
+		if (hasRequest('graphid')) {
+			add_audit(
+				AUDIT_ACTION_UPDATE,
+				AUDIT_RESOURCE_GRAPH,
+				'Graph ID ['.$graph['graphid'].'] Graph ['.getRequest('name').']'
+			);
 		}
+		else {
+			add_audit(AUDIT_ACTION_ADD, AUDIT_RESOURCE_GRAPH, 'Graph ['.getRequest('name').']');
+		}
+
+		unset($_REQUEST['form']);
+	}
+}
+elseif (hasRequest('delete') && hasRequest('graphid')) {
+	$graphId = getRequest('graphid');
+
+	if (hasRequest('parent_discoveryid')) {
+		$result = API::GraphPrototype()->delete($graphId);
+
+		show_messages($result, _('Graph prototype deleted'), _('Cannot delete graph prototype'));
+		clearCookies($result, getRequest('parent_discoveryid'));
 	}
 	else {
-		$result = !empty($_REQUEST['parent_discoveryid'])
-			? API::GraphPrototype()->create($graph)
-			: API::Graph()->create($graph);
+		$result = API::Graph()->delete($graphId);
 
-		if ($result) {
-			add_audit(AUDIT_ACTION_ADD, AUDIT_RESOURCE_GRAPH, 'Graph ['.$_REQUEST['name'].']');
-		}
+		show_messages($result, _('Graph deleted'), _('Cannot delete graph'));
+		clearCookies($result, getRequest('hostid'));
 	}
 
 	if ($result) {
 		unset($_REQUEST['form']);
-		clearCookies($result,
-			empty($_REQUEST['parent_discoveryid']) ? $_REQUEST['hostid'] : $_REQUEST['parent_discoveryid']
-		);
 	}
+}
+elseif (getRequest('go') == 'delete' && hasRequest('group_graphid')) {
+	$graphIds = getRequest('group_graphid');
 
-	if (isset($_REQUEST['graphid'])) {
-		show_messages($result, _('Graph updated'), _('Cannot update graph'));
+	if (hasRequest('parent_discoveryid')) {
+		$result = API::GraphPrototype()->delete($graphIds);
+
+		show_messages($result, _('Graph prototypes deleted'), _('Cannot delete graph prototypes'));
+		clearCookies($result, getRequest('parent_discoveryid'));
 	}
 	else {
-		show_messages($result, _('Graph added'), _('Cannot add graph'));
+		$result = API::Graph()->delete($graphIds);
+
+		show_messages($result, _('Graphs deleted'), _('Cannot delete graphs'));
+		clearCookies($result, getRequest('hostid'));
 	}
-}
-elseif (isset($_REQUEST['delete']) && isset($_REQUEST['graphid'])) {
-	$result = !empty($_REQUEST['parent_discoveryid'])
-		? API::GraphPrototype()->delete($_REQUEST['graphid'])
-		: API::Graph()->delete($_REQUEST['graphid']);
-
-	if ($result) {
-		unset($_REQUEST['form']);
-	}
-
-	show_messages($result, _('Graph deleted'), _('Cannot delete graph'));
-	clearCookies($result,
-		empty($_REQUEST['parent_discoveryid']) ? $_REQUEST['hostid'] : $_REQUEST['parent_discoveryid']
-	);
-}
-elseif ($_REQUEST['go'] == 'delete' && isset($_REQUEST['group_graphid'])) {
-	$goResult = !empty($_REQUEST['parent_discoveryid'])
-		? API::GraphPrototype()->delete($_REQUEST['group_graphid'])
-		: API::Graph()->delete($_REQUEST['group_graphid']);
-
-	show_messages($goResult, _('Graphs deleted'), _('Cannot delete graphs'));
-	clearCookies($goResult,
-		empty($_REQUEST['parent_discoveryid']) ? $_REQUEST['hostid'] : $_REQUEST['parent_discoveryid']
-	);
 }
 elseif ($_REQUEST['go'] == 'copy_to' && isset($_REQUEST['copy']) && isset($_REQUEST['group_graphid'])) {
 	if (!empty($_REQUEST['copy_targetid']) && isset($_REQUEST['copy_type'])) {
